# compiler

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .license-tools-config.json  .licenserc.yaml  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  LICENSE.txt  NOTICE.txt  README.md  run_pipeline.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check-license.yml  ci.yml  qisa-ci.yml  reusable-mlir-tests-ubuntu.yml
docs/adr/: 0000-template.md  0001-compiler-framework.md  0001-compiler-infrastructure.md
mlir/cmake/: EmbedFile.cmake  ExternalDependencies.cmake  LateExternalDependencies.cmake  SetupMLIR.cmake  SetupQirRunner.cmake
mlir/include/: CMakeLists.txt
mlir/include/qcc/: CMakeLists.txt  Constants.h
mlir/include/qcc/Compiler/: Compiler.h  Pipeline.h
mlir/include/qcc/Config/: Config.h.in
mlir/include/qcc/Conversion/: CMakeLists.txt
mlir/include/qcc/Conversion/AffineRaise/: AffineRaise.h  AffineRaise.td  CMakeLists.txt
mlir/include/qcc/Conversion/Aux_/: AuxOutputRecording.h  AuxOutputRecording.td  CMakeLists.txt
mlir/include/qcc/Conversion/JaspToQC/: CMakeLists.txt  JaspToQC.h  JaspToQC.td
mlir/include/qcc/Conversion/QCToQIRAdaptive/: CMakeLists.txt  QCToQIRAdaptive.h  QCToQIRAdaptive.td
mlir/include/qcc/Conversion/RaiseAffine/: CMakeLists.txt  RaiseAffine.h  RaiseAffine.td
mlir/include/qcc/Conversion/ToIntrinsics/: CMakeLists.txt  QVGates.h  ToIntrinsics.h  ToIntrinsics.td
mlir/include/qcc/Conversion/ToQIR/: CMakeLists.txt  Constants.h  QIRPipeline.h  ToQIR.h  ToQIR.td  constants.h
mlir/include/qcc/Dialect/: CMakeLists.txt
mlir/include/qcc/Dialect/Aux/IR/: Aux.h  AuxOps.td
mlir/include/qcc/Dialect/Jasp/: CMakeLists.txt
mlir/include/qcc/Support/: Elf2Mem.h
mlir/lib/: CMakeLists.txt
mlir/lib/Compiler/: CMakeLists.txt  Compiler.cpp  Pipeline.cpp
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/AffineRaise/: AffineCheck.cpp  AffineCheck.h  AffineRaise.cpp  CMakeLists.txt  Match.cpp  Match.h  PrepareAffineRaising.cpp  SCFToAffine.cpp  SimplifyAffEx.cpp  SimplifyAffEx.h  WhileToFor.cpp
mlir/lib/Conversion/Aux_/: AuxOutputRecording.cpp  CMakeLists.txt
mlir/lib/Conversion/JaspToQC/: AddEntrypointToMain.cpp  CMakeLists.txt  CheckStaticQubitAllocation.cpp  ConvertMemrefToStaticQubits.cpp  JaspCheckStaticQubitAllocation.cpp  JaspToQC.cpp  StaticizeQubitRefs.cpp
mlir/lib/Conversion/QCToQIRAdaptive/: CMakeLists.txt  QCToQIRAdaptive.cpp  QCToQIRAdaptiveCleanup.cpp
mlir/lib/Conversion/RaiseAffine/: CMakeLists.txt  RaiseAffine.cpp  fromEnzyme.cpp  fromEnzyme.h
mlir/lib/Conversion/ToIntrinsics/: CMakeLists.txt  ConvertQCToIntrinsics.cpp  ConvertQIRToIntrinsics.cpp
mlir/lib/Conversion/ToQIR/: CMakeLists.txt  ConvertQCToQIR.cpp  FinalizeToQIR.cpp  PrepToQIR.cpp  QCToQIR.cpp  QIRPipeline.cpp  StdToLLVM.cpp  StdToQIR.cpp  ToQIRFinalize.cpp  ToQIRModule.cpp  ToQIRPrep.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Aux/IR/: AuxDialect.cpp  CMakeLists.txt
mlir/lib/Dialect/Aux_/IR/: AuxDialect.cpp  CMakeLists.txt
mlir/lib/Dialect/Dummy/IR/: CMakeLists.txt  DummyDialect.cpp  DummyOps.cpp
mlir/lib/Dialect/Jasp/IR/: CMakeLists.txt  JaspDialect.cpp  JaspOps.cpp
mlir/lib/Dialect/PrelimHLEP/IR/: CMakeLists.txt  PrelimHLEPDialect.cpp
mlir/lib/Support/: CMakeLists.txt  Elf2Mem.cpp
mlir/lib/qcc/Compiler/: CMakeLists.txt  Pipeline.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  prelim-hlep-brainstorm.mlir
mlir/test/tools/qcc/: cli_options.mlir  emit_qir.mlir  example_ghz.mlir  example_ghz_intrinsics.mlir  example_teleport.mlir  ghz_from_qrisp.mlir  ghz_from_qrisp_v1.mlir  ghz_from_qrisp_v2.mlir  jasp-generate-ghz.mlir  list-targets.mlir  nested_loop_unrolling.mlir  qc-to-qir-adaptive-profile.mlir  qc-to-qir-base-profile.mlir  qc-to-qir-test.mlir  simple_loop.mlir  target-hisep-q-unsupported.mlir  target-hisep-q.mlir  test_forward_control_flow.mlir
mlir/test/tools/qcc-opt/: add-entrypoint-to-main-custom-name-test.mlir  add-entrypoint-to-main-missing-test.mlir  add-entrypoint-to-main-test.mlir  dummy-dialect-test.mlir  jasp-check-static-qubit-allocation-test.mlir  jasp-convert-memref-to-static-qubits-test.mlir  jasp-dialect-test.mlir  jasp-generate-ghz.mlir  jasp-quantum-state-deletion-test.mlir  jasp-staticize-qubit-refs-test.mlir  jasp-to-qc-conversion-test.mlir  jasp-to-qc-gates-test.mlir  mqt-core-integration-test.mlir  output-recording.mlir  qc-to-qir-adaptive.mlir  test.mlir  to-qir-adaptive.mlir
mlir/test/tools/qcc-opt/AffineRaise/: prepare-affine-raising.mlir  scf-to-affine.mlir  simple-affine-raise.mlir  while-to-for.mlir
mlir/test/tools/qcc-opt/ToIntrinsics/: convert-qc-to-intrinsics.mlir  convert-qir-to-intrinsics.mlir  vector-intrinsics.mlir
mlir/test/tools/qcc-opt/ToQIR/: convert-qc-to-qir-with-structured-output-data.mlir  convert-qc-to-qir.mlir  export-to-qir-full-pipeline.mlir  finalize-to-qir.mlir  memref-output-convert-to-qir.mlir  native-gates.mlir  output-recording.mlir  prep-to-qir.mlir  qc-to-qir-full-pipeline.mlir  qc-to-qir.mlir  std-to-llvm.mlir  std-to-qir.mlir  to-qir-adaptive.mlir  to-qir-finalize.mlir  to-qir-prep.mlir
mlir/test/tools/qcc/Inputs/: t_gate.mlir
mlir/test/tools/qcc/qrisp/: README.md  ghz_from_qrisp.mlir
mlir/test/tools/qcc/qrisp-integration/: README.md  bell_state.generated_test.mlir  bell_state.mlir  bell_state.py  bell_state.test.py  ghz.generated_test.mlir  ghz.mlir  ghz.py  ghz.test.py  integration_run.py  integration_run.sh  iqpe.mlir  iqpe.py  pyproject.toml  qrisp_generate_mlir.sh  requirements.txt  t_gate_teleportation.mlir  t_gate_teleportation.py
mlir/test/tools/qcc/qrisp-integration/qrisp_sources/: bell_state.py  ghz.py
mlir/tools/: CMakeLists.txt
mlir/tools/elf2mem/: CMakeLists.txt  elf2mem.cpp
mlir/tools/qcc/: CMakeLists.txt  hisepq.ld  main.cpp  qcc.cpp
mlir/tools/qcc-lsp-server/: CMakeLists.txt  qcc-lsp-server.cpp
mlir/tools/qcc-opt/: CMakeLists.txt  main.cpp  qcc-opt.cpp
mlir/utils/: generate_qrisp_mlir.py
utils/: provision-llvm
(+18 files in other folders)
